# KFC-PW5-TB33-Kyndaliuk

./: README.md  config.py  main.py  pyproject.toml
database/: connection.py  crud.py  models.py
genetic_algorithm/: algorithm.py
genetic_algorithm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gui/: main_window.py  selection_settings_window.py  solve_task_window.py
logic/: selection_manager.py
migrations/: env.py
migrations/versions/: e32384f91547_first_commit.py
tests/: test_fitness_evaluation.py  test_new_population_evaluation.py  test_offspring_creation.py  test_parent_selection.py  test_population_selection.py  test_sanity.py
